# numerical-methods

./: CMakeLists.txt  README.md  main.cpp  relatorio_metodos.md  relatorio_run.txt  relatorio_run_ext.txt
Trabalho_II/Metodos/FatoracaoLDP/: FatoracaoLDP.cpp
Trabalho_II/Metodos/Fatoracao_LU/: Fatoracao_LU.cpp
metodos/: bisseccao.cpp  funcoes.h  math_jato.cpp  newton_raphson.cpp  posicao_falsa.cpp
metodos/bisseccao/: Bisseccao.cpp  Bisseccao.hpp  bisseccao.cpp
metodos/funcoes/: Funcoes.cpp  Funcoes.hpp
metodos/menu/: ProcessadorMetodos.hpp  Relatorio.hpp  RelatorioJato.hpp  SistemaJatos.hpp  UtilsMenu.cpp  UtilsMenu.hpp
metodos/metodo/: MetodoNumerico.hpp
metodos/newton/: NewtonRaphson.cpp  NewtonRaphson.hpp
metodos/newton_raphson/: newton_raphson.cpp
metodos/posicaoFalsa/: PosicaoFalsa.cpp  PosicaoFalsa.hpp
metodos/posicao_falsa/: posicao_falsa  posicao_falsa.cpp
posicao-falsa/: posicaoFalsa  posicaoFalsa.c
src/: newton_raphson.cpp
