cmake_minimum_required(VERSION 3.10)
project(Trabalho1_MN1)
set(CMAKE_CXX_STANDARD 17)

add_executable(newton_raphson
    metodos/newton_raphson/newton_raphson.cpp
)

# add_executable(posicao_falsa
#     metodos/posicao_falsa/posicao_falsa.cpp
# )

# add_executable(bisseccao
#     metodos/bisseccao/bisseccao.cpp
# )
